--- a/input.html
+++ b/input.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form action="input.php">
+<form action="http://httpbin.org/get">
     <h1>Buy Your Way to a Better Education!</h1>
 
     <p>
