--- a/input.html
+++ b/input.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form action="http://httpbin.org/get">
+<form action="sucker.php" method="post">
     <h1>Buy Your Way to a Better Education!</h1>
 
     <p>
@@ -46,8 +46,6 @@
                 <input type="radio" name="cc" value="mastercard"/> MasterCard
             </div>
         </dd>
-
-
     </dl>
 
     <div>
